---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 01.04.2023
  Features:
    - Added a popup window after the first completion to give a hint about the auto-continue and disable popup option
    - Added option to split combinator signal output. If enabled:
      - Exisiting combinator will output the required item for the current
	  stage only
      - New combinator will output the current stage as special signal S only
    - Added more strings to translation config file
  Changes:
    - Changed GUI to only display the required items for the current stage
    - Changed GUI to display the stage number
    - Various GUI overhauls to look more aesthetic
  Bugfixes:
    - Fixed a bug that caused the GUI button to not be added when a mod change occures
    - Fixed the "/resetSpaceX" command to properly reset the launch progress
    - Fixed Bob Mods compatibility when robo ports are disabled. Will use personal roboport instead
    - Fixed closing Log window as well as main window when SpaceX button is pressed
---------------------------------------------------------------------------------------------------
Version: 1.1.1
  Changes:
    - Redacted
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Changes:
    - Minor corrections to the technology pre-requisites when using Bobs mods courtesy of KiwiHawk.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
  Changes:
    - Version 1.1 compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Changes:
    - Correction to assembly robot icon size
---------------------------------------------------------------------------------------------------
Version: 0.5.1
  Changes:
    - Russian language translation update