@@ -24,6 +24,9 @@ launches=Interstellar Launches:
 spacex-log-caption=Log
 spacex-log-tooltip=Show the log of launch times
 gui-log-title=SpaceX Launches
+spacex-log-launch=Launch
+spacex-log-time=Time
+spacex-log-notes=Notes
 satellite-network-text1=Finally after multiple launches of satellites you come to the realisation of what the final solution will look like: Complete eradication of the natives and time to build your own ride out of here!
 drydock-text1=Congratulations [Pat yourself on the back] Drydock done! We just need to build the ship, its starting to feel like the base that builds the base.
 gnc-title=Satellite Network Complete
@@ -129,6 +132,7 @@ SpaceX-no-bob=No Bob's mods compatibility
 SpaceX-no-popup=Suppress Narrative Popups
 SpaceX-auto-continue=Auto-continue on
 SpaceX-split-combinator=SpaceX split combinator output (required item, stage)
+SpaceX-log-days=Show days in the Log
 
 [mod-setting-description]
 SpaceX-game-mode=SpaceX main difficulty settings.  Classic will give a 0.14 equivalent experience, SpaceX Plus increases research cost 4x production cost 2x and requires 5x launch profile, SpaceX Extreme increases research cost 16x, production cost 16x and launches required 25x.
@@ -142,6 +146,7 @@ SpaceX-no-bob=Bob's mods compatibility will not be used in this playthrough
 SpaceX-no-popup=If selected then the popups for the completion of the satellite network and the drydock will be suppressed.  (Good for games where you want to launch many FTL craft)
 SpaceX-auto-continue=This option will automatically select the 'Bring it on' option when the FTL space craft has been completed.  Also the popup is suppressed - use in conjucntion with the above selection to remove the popups so you can keep launching multiple FTL spacecraft without manual intervention.
 SpaceX-split-combinator=Splits the SpaceX combinator in two: One which outputs only the required item and a new combinator which outputs the special symbol S for the current stage.
+SpaceX-log-days="2d 1h" instead of "49h"
 
 [SpaceX-Progress]
 satellites=Satellites launched
