@@ -123,6 +123,8 @@ data.raw["gui-style"].default["SpaceMod_table_style"] = {
 	horizontal_spacing = 5,
 	vertical_spacing = 5,
 	horizontally_stretchable = "on",
+	vertical_line_color = { r = 0.26, g = 0.26, b = 0.26 },
+	horizontal_line_color = { r = 0.26, g = 0.26, b = 0.26 },
 }
 
 data.raw["gui-style"].default["SpaceMod_item_table_style"] = {
@@ -130,9 +132,9 @@ data.raw["gui-style"].default["SpaceMod_item_table_style"] = {
 	horizontal_spacing = 5,
 	vertical_spacing = 5,
 	horizontally_stretchable = "on",
-	vertical_line_color = {r=0.26, g=0.26, b=0.26},
-	column_widths = {{ column = 1, minimal_width = 125 }, { column = 2, minimal_width = 75 }},
-	horizontal_line_color = {r=0.26, g=0.26, b=0.26},
+	vertical_line_color = { r = 0.26, g = 0.26, b = 0.26 },
+	column_widths = { { column = 1, minimal_width = 125 }, { column = 2, minimal_width = 75 } },
+	horizontal_line_color = { r = 0.26, g = 0.26, b = 0.26 },
 }
 
 data.raw["gui-style"].default["Launch_label_style"] = {
